<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <!--Layout for Username-->
    <LinearLayout
        android:id="@+id/borrower_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/borrower_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/borrower_name_tv"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <!--Layout for Password-->
    <LinearLayout
        android:id="@+id/amount_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/amount"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/amount_owed_tv"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:textSize="18sp"/>

    </LinearLayout>

    <!--Layout for ConfirmPassword-->
    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Date"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/back_button"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/paid_button"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:text="@string/paid"/>
    </LinearLayout>

</LinearLayout>
