<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <!--Layout for Username-->
    <LinearLayout
        android:id="@+id/borrower_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/borrower_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/borrower"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/borrower_input"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <!--Layout for Password-->
    <LinearLayout
        android:id="@+id/amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/amount"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/amount_input"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <!--Layout for ConfirmPassword-->
    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Date"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/date_input"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:focusable="false"
            android:longClickable="false"/>
    </LinearLayout>

    <Button
        android:id="@+id/confirm_add_borrower_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/Add"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>
</LinearLayout>